# comms-software

./: .cproject  .gitmodules  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  README.md  STM32H743I2Setup.ioc  STM32H7A3ZIQSetup.ioc  comms-software.ioc
Core/Inc/: GNSS.hpp  GNSSMessage.hpp  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Core/Inc/CAN/: Driver.hpp  Frame.hpp
Core/Inc/FreeRTOSTasks/: CANGatekeeperTask.hpp  GNSSGatekeeperTask.hpp  MCUTemperatureTask.hpp  TransceiverTask.hpp
Core/Inc/Platform/: COMMS_Definitions.hpp
Core/Inc/Platform/GNSS/: GNSS.hpp  GNSSMessage.hpp
Core/Inc/Platform/Parameters/: HousekeepingService.hpp  PeakSatParameters.hpp
Core/Inc/eMMC/: Driver.hpp
Core/Src/: GNSS.cpp  GNSSMessage.cpp  main.c  main.cpp  stm32h7xx_hal_msp.c  stm32h7xx_it.c
Core/Src/CAN/: Driver.cpp
Core/Src/FreeRTOSTasks/: CAN.cpp  CANGatekeeperTask.cpp  GNSSGatekeeperTask.cpp  HousekeepingTask.cpp  MCUTemperatureTask.cpp  TransceiverTask.cpp
Core/Src/Platform/: Service.cpp  TimeGetter.cpp
Core/Src/Platform/Parameters/: BootCounter.cpp
Core/Src/Platform/Services/: HousekeepingService.cpp  ParameterService.cpp
Core/Src/eMMC/: Driver.cpp
Core/lib/FreeRTOS/Source/: CMSIS_RTOS_V2.rar
Core/lib/component-drivers/: README.md
Core/lib/component-drivers/AT86RF215/inc/: at86rf215.hpp  (+1 more)
Core/lib/cross-platform-software/: .gitmodules  CMakeLists.txt
Core/lib/cross-platform-software/inc/FreeRTOSTasks/: MCUTemperatureTask.hpp
Drivers/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_hal_fdcan.h
Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_fdcan.c
(+3 files in other folders)
